Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Go/DriverExamples/wrappers/AstroFuncDll.h

// Rotates the Equinoctial covariance to UVW
// Note: This method uses the global Earth constants so make sure that you select the right Earth model by calling the EnvConst/EnvSetGeoIdx method
// The n terms must be normalized by n
// The input position, velocity and covariance must all have the same reference equator and equinox.
void CovMtxEqnxToUVW(double pos[3], double vel[3], double covMtxEqnx[6][6], double covMtxUVW[6][6]);
// Rotates the UVW covariance to Equinoctial
// Note: This method uses the global Earth constants so make sure that you select the right Earth model by calling the EnvConst/EnvSetGeoIdx method
// The n terms are normalized by n
// The input position, velocity reference equator and equinox determine the output covariance reference frame.
void CovMtxUVWToEqnx(double pos[3], double vel[3], double covMtxUVW[6][6], double covMtxEqnx[6][6]);
// Rotates the ECI covariance to UVW
// Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
void CovMtxECIToUVW(double pos[3], double vel[3], double covMtxECI[6][6], double covMtxUVW[6][6]);
// Rotates the UVW covariance to ECI
// Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
void CovMtxUVWToECI(double pos[3], double vel[3], double covMtxUVW[6][6], double covMtxECI[6][6]);
// Converts covariance matrix ECI to EFG.
// EFG = Earth Fixed Greenwich
// ECI = Earth Centered Inertial - need to determine TEME or J2K
void CovMtxECIToEFG(double thetaG, double covECI[6][6], double covEFG[6][6]);
// Converts covariance matrix EFG to ECI.
// EFG = Earth Fixed Greenwich
// ECI = Earth Centered Inertial - need to determine TEME or J2K
void CovMtxEFGToECI(double thetaG, double covEFG[6][6], double covECI[6][6]);
// Converts 6x6 symmetric Matrix/2D array to 1D array of 21 elements (lower triangular of a 6x6 symmetric matrix)
void Mtx6x6ToLTA21(double symMtx6x6[6][6], double lta21[21]);
// Converts 1D array of 21 elements (lower triangular of a 6x6 symmetric matrix) to a 6x6 symmetric matrix
void LTA21ToMtx6x6(double lta21[21], double symMtx6x6[6][6]);
// Converts 9x9 symmetric Matrix/2D array to 1D array of 45 elements (lower triangular of a 9x9 symmetric matrix)
void Mtx9x9ToLTA45(double symMtx9x9[9][9], double lta45[45]);
// Converts 1D array of 45 elements (lower triangular of a 9x9 symmetric matrix) to a 9x9 symmetric matrix
void LTA45ToMtx9x9(double lta45[45], double symMtx9x9[9][9]);
// Propagate xyzDate covariance forward to the propagation time
void PropCovFrState(double rms, double consider, double stateArray[54], double cov[9][9], double propCov[6][6]);
// Rotates the ECI covariance to UVW
// Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
void CovMtxECIToEqnx(double pos[3], double vel[3], double covMtxECI[9][9], double covMtxEqnx[9][9]);
// Rotates the UVW covariance to ECI
// Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
void CovMtxEqnxToECI9x9(double pos[3], double vel[3], double covEqnx[9][9], double covMtxECI[9][9]);
// Rotates the UVW covariance to ECI
// Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
void CovMtxEqnxToUVW9x9(double pos[3], double vel[3], double covEqnx[9][9], double covMtxUVW[9][9]);
// Update (propagate) covariance to a future time with a supplied covariance, state transition matrix
// consider parameter and RMS. Consider parameter is applied to the drag term only.
// Full covariance matrix is multiplied by RMS squared.  State transition matrix can be obtained from 
// SpProp.SpGetStateMtx or supplying your own. State matrix, input and output covariance must be in 
// matching coordinate systems.
void CovMtxUpdate(double rmsIn, double consider, double cov[9][9], double stateArray[54], double propCov[6][6]);
// Annual Aberration calculated using equations from Astronomical Algorithms, Jean Meeus, 2nd Edition with Corrections as of June 15, 2005
void AberrationAnnual(double ra, double decl, double dS50UTC, double* raDelta, double* decDelta);
// Diurnal Aberration is due to the rotation of the Earth about it's axis. This is only valid for ground based sensors.
// Diurnal Aberration calculated using equations from Explanatory Supplement to the Astronomical Almanac 3rd Edition, 2013
void AberrationDiurnal(double ra, double decl, double dS50UTC, double senPos[3], double* raDelta, double* decDelta);
// Sets JPL parameters
// Notes: Set JPL parameters will be used by SP, SPG4-XP, and anything that requires access to JPL data
void JplSetParameters(char jplFile[512], double ds50Start, double ds50Stop);
// Gets JPL parameters
void JplGetParameters(char jplFile[512], double* ds50Start, double* ds50Stop);
// Resets JPL parameters & removes JPL ephemeris data
void JplReset();