Sgp4Prop_v9.4/Sgp4Prop/SampleCode/Ada/DriverExamples/wrappers/astrofuncdll.ads


    -- Rotates the Equinoctial covariance to UVW
    -- Note: This method uses the global Earth constants so make sure that you select the right Earth model by calling the EnvConst/EnvSetGeoIdx method
    -- The n terms must be normalized by n
    -- The input position, velocity and covariance must all have the same reference equator and equinox.
    procedure CovMtxEqnxToUVW
        (pos               : in      Double1D;
        vel                : in      Double1D;
        covMtxEqnx         : in      Double2D;
        covMtxUVW          : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "CovMtxEqnxToUVW";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --covMtxEqnx         : Double2D  (1..6,1..6);
        --covMtxUVW          : Double2D  (1..6,1..6);

    -- Rotates the UVW covariance to Equinoctial
    -- Note: This method uses the global Earth constants so make sure that you select the right Earth model by calling the EnvConst/EnvSetGeoIdx method
    -- The n terms are normalized by n
    -- The input position, velocity reference equator and equinox determine the output covariance reference frame.
    procedure CovMtxUVWToEqnx
        (pos               : in      Double1D;
        vel                : in      Double1D;
        covMtxUVW          : in      Double2D;
        covMtxEqnx         : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "CovMtxUVWToEqnx";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --covMtxUVW          : Double2D  (1..6,1..6);
        --covMtxEqnx         : Double2D  (1..6,1..6);

    -- Rotates the ECI covariance to UVW
    -- Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
    procedure CovMtxECIToUVW
        (pos               : in      Double1D;
        vel                : in      Double1D;
        covMtxECI          : in      Double2D;
        covMtxUVW          : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "CovMtxECIToUVW";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --covMtxECI          : Double2D  (1..6,1..6);
        --covMtxUVW          : Double2D  (1..6,1..6);

    -- Rotates the UVW covariance to ECI
    -- Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
    procedure CovMtxUVWToECI
        (pos               : in      Double1D;
        vel                : in      Double1D;
        covMtxUVW          : in      Double2D;
        covMtxECI          : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "CovMtxUVWToECI";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --covMtxUVW          : Double2D  (1..6,1..6);
        --covMtxECI          : Double2D  (1..6,1..6);

    -- Converts covariance matrix ECI to EFG.
    -- EFG = Earth Fixed Greenwich
    -- ECI = Earth Centered Inertial - need to determine TEME or J2K
    procedure CovMtxECIToEFG
        (thetaG            :         Long_Float;
        covECI             : in      Double2D;
        covEFG             : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "CovMtxECIToEFG";
        --covECI             : Double2D  (1..6,1..6);
        --covEFG             : Double2D  (1..6,1..6);

    -- Converts covariance matrix EFG to ECI.
    -- EFG = Earth Fixed Greenwich
    -- ECI = Earth Centered Inertial - need to determine TEME or J2K
    procedure CovMtxEFGToECI
        (thetaG            :         Long_Float;
        covEFG             : in      Double2D;
        covECI             : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "CovMtxEFGToECI";
        --covEFG             : Double2D  (1..6,1..6);
        --covECI             : Double2D  (1..6,1..6);

    -- Converts 6x6 symmetric Matrix/2D array to 1D array of 21 elements (lower triangular of a 6x6 symmetric matrix)
    procedure Mtx6x6ToLTA21
        (symMtx6x6         : in      Double2D;
        lta21              : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "Mtx6x6ToLTA21";
        --symMtx6x6          : Double2D  (1..6,1..6);
        --lta21              : Double1D  (1..21);

    -- Converts 1D array of 21 elements (lower triangular of a 6x6 symmetric matrix) to a 6x6 symmetric matrix
    procedure LTA21ToMtx6x6
        (lta21             : in      Double1D;
        symMtx6x6          : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "LTA21ToMtx6x6";
        --lta21              : Double1D  (1..21);
        --symMtx6x6          : Double2D  (1..6,1..6);

    -- Converts 9x9 symmetric Matrix/2D array to 1D array of 45 elements (lower triangular of a 9x9 symmetric matrix)
    procedure Mtx9x9ToLTA45
        (symMtx9x9         : in      Double2D;
        lta45              : out     Double1D)
    with Import => True,
        Convention => C,
        External_Name => "Mtx9x9ToLTA45";
        --symMtx9x9          : Double2D  (1..9,1..9);
        --lta45              : Double1D  (1..45);

    -- Converts 1D array of 45 elements (lower triangular of a 9x9 symmetric matrix) to a 9x9 symmetric matrix
    procedure LTA45ToMtx9x9
        (lta45             : in      Double1D;
        symMtx9x9          : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "LTA45ToMtx9x9";
        --lta45              : Double1D  (1..45);
        --symMtx9x9          : Double2D  (1..9,1..9);

    -- Propagate xyzDate covariance forward to the propagation time
    procedure PropCovFrState
        (rms               :         Long_Float;
        consider           :         Long_Float;
        stateArray         : in      Double1D;
        cov                : in      Double2D;
        propCov            : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "PropCovFrState";
        --stateArray         : Double1D  (1..54);
        --cov                : Double2D  (1..9,1..9);
        --propCov            : Double2D  (1..6,1..6);

    -- Rotates the ECI covariance to UVW
    -- Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
    procedure CovMtxECIToEqnx
        (pos               : in      Double1D;
        vel                : in      Double1D;
        covMtxECI          : in      Double2D;
        covMtxEqnx         : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "CovMtxECIToEqnx";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --covMtxECI          : Double2D  (1..9,1..9);
        --covMtxEqnx         : Double2D  (1..9,1..9);

    -- Rotates the UVW covariance to ECI
    -- Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
    procedure CovMtxEqnxToECI9x9
        (pos               : in      Double1D;
        vel                : in      Double1D;
        covEqnx            : in      Double2D;
        covMtxECI          : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "CovMtxEqnxToECI9x9";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --covEqnx            : Double2D  (1..9,1..9);
        --covMtxECI          : Double2D  (1..9,1..9);

    -- Rotates the UVW covariance to ECI
    -- Note: This method uses the global Earth constants so make sure that you select the proper Earth model by calling the EnvConst/EnvSetGeoIdx method
    procedure CovMtxEqnxToUVW9x9
        (pos               : in      Double1D;
        vel                : in      Double1D;
        covEqnx            : in      Double2D;
        covMtxUVW          : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "CovMtxEqnxToUVW9x9";
        --pos                : Double1D  (1..3);
        --vel                : Double1D  (1..3);
        --covEqnx            : Double2D  (1..9,1..9);
        --covMtxUVW          : Double2D  (1..9,1..9);

    -- Update (propagate) covariance to a future time with a supplied covariance, state transition matrix
    -- consider parameter and RMS. Consider parameter is applied to the drag term only.
    -- Full covariance matrix is multiplied by RMS squared.  State transition matrix can be obtained from 
    -- SpProp.SpGetStateMtx or supplying your own. State matrix, input and output covariance must be in 
    -- matching coordinate systems.
    procedure CovMtxUpdate
        (rmsIn             :         Long_Float;
        consider           :         Long_Float;
        cov                : in      Double2D;
        stateArray         : in      Double1D;
        propCov            : out     Double2D)
    with Import => True,
        Convention => C,
        External_Name => "CovMtxUpdate";
        --cov                : Double2D  (1..9,1..9);
        --stateArray         : Double1D  (1..54);
        --propCov            : Double2D  (1..6,1..6);

    -- Annual Aberration calculated using equations from Astronomical Algorithms, Jean Meeus, 2nd Edition with Corrections as of June 15, 2005
    procedure AberrationAnnual
        (ra                :         Long_Float;
        decl               :         Long_Float;
        dS50UTC            :         Long_Float;
        raDelta            : out     Long_Float;
        decDelta           : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "AberrationAnnual";

    -- Diurnal Aberration is due to the rotation of the Earth about it's axis. This is only valid for ground based sensors.
    -- Diurnal Aberration calculated using equations from Explanatory Supplement to the Astronomical Almanac 3rd Edition, 2013
    procedure AberrationDiurnal
        (ra                :         Long_Float;
        decl               :         Long_Float;
        dS50UTC            :         Long_Float;
        senPos             : in      Double1D;
        raDelta            : out     Long_Float;
        decDelta           : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "AberrationDiurnal";
        --senPos             : Double1D  (1..3);

    -- Sets JPL parameters
    -- Notes: Set JPL parameters will be used by SP, SPG4-XP, and anything that requires access to JPL data
    procedure JplSetParameters
        (jplFile           : in      String;
        ds50Start          :         Long_Float;
        ds50Stop           :         Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "JplSetParameters";
        --jplFile            : String    (1..512);

    -- Gets JPL parameters
    procedure JplGetParameters
        (jplFile           : out     String;
        ds50Start          : out     Long_Float;
        ds50Stop           : out     Long_Float)
    with Import => True,
        Convention => C,
        External_Name => "JplGetParameters";
        --jplFile            : String    (1..512);

    -- Resets JPL parameters & removes JPL ephemeris data
    procedure JplReset
    with Import => True,
        Convention => C,
        External_Name => "JplReset";
